--- a/app/src/main/res/layout/view_player.xml
+++ b/app/src/main/res/layout/view_player.xml
@@ -3,8 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <data>
 
+        <variable
+            name="handlers"
+            type="com.milad.myplayer.MainActivity.MyHandlers" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -59,9 +65,11 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
+            android:onClick="@{() -> handlers.showBottomSheet()}"
+            android:padding="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_expand"
+            app:srcCompat="@drawable/ic_expand2"
             tools:ignore="VectorDrawableCompat" />
 
         <SeekBar
@@ -129,8 +137,8 @@
 
         <ImageView
             android:id="@+id/play_pause"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="32dp"
+            android:layout_height="29dp"
             android:layout_marginTop="1dp"
             android:padding="5dp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
